Build: set up footer with logos for links.  Still need to fix spacing and size, but will work for now

--- a/portfolio/src/styles/Footer.css
+++ b/portfolio/src/styles/Footer.css
@@ -1,12 +1,23 @@
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 .footer-class {
+    margin-top: auto;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     background-color: rgb(212, 212, 212, 1);
-    width: 100%;
-    height: 20% 0;
+    width: calc(100% - 40px);
 }
 
 footer p {
@@ -14,7 +25,7 @@ footer p {
 }
 
 footer a {
-    margin: 0 10%;
+  
     text-decoration: none;
 }
 
@@ -25,4 +36,24 @@ footer a {
         margin: 0 auto;
         
     }
+}
+
+.linkedin-icon {
+    width: 45%;
+   
+  }
+.github-icon {
+    width: 90%;
+    margin:  ;
+  }
+.insta-icon {
+    width: 5%;
+    
+  }
+
+.footer-list {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    padding: 0;
 }
